--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <div class="body d-flex">
+        <div class="body d-lg-flex">
             <div class="sidebar col-2 d-md-block d-none align-items-center" style="min-height: 100%;background-color: #1b354d;font-size: 15px;">
                 <ul class="list-group rounded-0" >
                     <a class="list-group-item rounded-0 d-flex gap-2 text-white" >
