--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -79,10 +79,16 @@
     <script src="./assets/js/directives/header.directive.js"></script>
     <script src="./assets/js/directives/sidebar.directive.js"></script>
 
+    <!-- Filters -->
+    <script src="./assets/js/filters/sumOfAmount.filter.js"></script>
+    <script src="./assets/js/filters/indianRupee.filter.js"></script>
+
     <!-- Services -->
     <script src="./assets/js/services/addAgency.service.js"></script>
+    <script src="./assets/js/services/billEntry.service.js"></script>
 
     <!-- Controllers -->
     <script src="./assets/js/controllers/dashboard.controller.js"></script>
     <script src="./assets/js/controllers/addAgency.controller.js"></script>
+    <script src="./assets/js/controllers/billEntry.controller.js"></script>
 </html>
