--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -19,13 +19,15 @@
             type="text/css"
             href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
         />
+        <!-- Select 2 -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+            rel="stylesheet"
+        />
         <!-- Custom CSS -->
         <link rel="stylesheet" href="./assets/css/app.css" />
     </head>
-    <body
-        ng-controller="DashboardController"
-        ng-init="sidebarToggle=false"
-    >
+    <body ng-controller="DashboardController" ng-init="sidebarToggle=false">
         <div class="main min-vh-100 d-flex flex-column">
             <header-directive></header-directive>
             <div
@@ -35,13 +37,20 @@
                 <sidebar-directive
                     class="sidebar position-absolute"
                 ></sidebar-directive>
-                <div class="content p-2 h-100">
+                <div class="content p-2 bg-white">
                     <ui-view></ui-view>
                 </div>
             </div>
         </div>
-        <div id="loadingScreen" class="d-none loadingScreen position-fixed top-0 bg-white start-0 vh-100 vw-100 d-flex align-items-center justify-content-center bg-opacity-25">
-            <img src="./assets/images/loading.gif" style="width: 250px;" alt="">
+        <div
+            id="loadingScreen"
+            class="d-none loadingScreen position-fixed top-0 bg-white start-0 vh-100 vw-100 d-flex align-items-center justify-content-center bg-opacity-25"
+        >
+            <img
+                src="./assets/images/loading.gif"
+                style="width: 250px"
+                alt=""
+            />
         </div>
     </body>
     <!-- Bootstrap -->
@@ -69,6 +78,10 @@
         type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/toastify-js"
     ></script>
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Select 2 -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <!-- Custom JS -->
     <script src="./assets/js/app.js"></script>
