--- a/other_bills_task/ifmis/frontend/index.html
+++ b/other_bills_task/ifmis/frontend/index.html
@@ -33,7 +33,7 @@
                 <!--left side of header-->
                 <div class="left d-flex align-items-center">
                     <!--IFMIS Logo -->
-                    <img src="https://d20exy1ygbh3sg.cloudfront.net/fms/images/newUi/ifmis-logo.png" style="height:30px; width: 100px;" class="d-none d-md-block img-fluid"/>
+                    <img src="https://d20exy1ygbh3sg.cloudfront.net/fms/images/newUi/ifmis-logo.png" style="height:40px; width: 200px;" class="d-none d-md-block img-fluid"/>
                        <!-- Menu Button -->
                        <div class="menuBtn fs-3  bg-secondary bg-opacity-50" id="sidebarToggler" role="button">
                         <i class="bi bi-list text-white"></i>
@@ -65,25 +65,25 @@
              <!-- Sidebar -->
              <div id="sidebar" class="sidebar" style="min-height: 100%;">
                 <!-- Menu -->
-                <ul class="menu list-unstyled text-white  mt-2 px-2 py-3">
+                <ul class="menu list-unstyled text-white  mt-2 px-2 py-3 menubar">
                     <i class="bi bi-house-door-fill text-white "></i>Home 
-                    <li class="px-2 py-2">Add Agency in Bulk</li>
-                    <li class="px-2 py-2" ui-sref="addAgency">Add New Agency</li>
-                    <li class="px-2 py-2" ui-sref="billEntry">Bill Entry</li>
-                    <li class="px-2 py-2">View Bill</li>
-                    <li class="px-2 py-2">Covid Bills</li>
-                    <li class="px-2 py-2">Print Bill</li>
-                    <li class="px-2 py-2">Check Bill Status</li>
-                    <li class="px-2 py-2">Pay Slips</li>
-                    <li class="px-2 py-2">Reports</li>
-                    <li class="px-2 py-2">Cancel Bills</li>
-                    <li class="px-2 py-2">Check Form Type</li>
-                    <li class="px-2 py-2">Ekuber Returns(122)</li>
-                    <li class="px-2 py-2">Check Employee Details</li>
-                    <li class="px-2 py-2">E-Flyleaf</li>
-                    <li class="px-2 py-2">DDO Reconcilation</li>
-                    <li class="px-2 py-2">E-Bill Particulars</li>
-                    <li class="px-2 py-2">Teacher Incentive Print Bill</li>
+                    <a class="list-group-item px-2 py-2" href="">Add Agency in Bulk</a>
+                    <a class="list-group-item px-2 py-2" ui-sref="addAgency">Add New Agency</a>
+                    <a class="list-group-item px-2 py-2" ui-sref="billEntry">Bill Entry</a>
+                    <a class="list-group-item px-2 py-2"  href="">View Bill</a>
+                    <a class="list-group-item px-2 py-2"  href="">Covid Bills</a>
+                    <a class="list-group-item px-2 py-2"  href="">Print Bill</a>
+                    <a class="list-group-item px-2 py-2"  href="">Check Bill Status</a>
+                    <a class="list-group-item px-2 py-2"  href="">Pay Slips</a>
+                    <a class="list-group-item px-2 py-2"  href="">Reports</a>
+                    <a class="list-group-item px-2 py-2"  href="">Cancel Bills</a>
+                    <a class="list-group-item px-2 py-2"  href="">Check Form Type</a>
+                    <a class="list-group-item px-2 py-2"  href="">Ekuber Returns(122)</a>
+                    <a class="list-group-item px-2 py-2"  href="">Check Employee Details</a>
+                    <a class="list-group-item px-2 py-2"  href="">E-Flyleaf</a>
+                    <a class="list-group-item px-2 py-2"  href="">DDO Reconcilatio</a>
+                    <a class="list-group-item px-2 py-2"  href="">E-Bill Particulars</a>
+                    <a class="list-group-item px-2 py-2"  href="">Teacher Incentive Print Bill</a>
                 </ul>
             </div>
                 <!--main content-->
