--- a/other_bills_task/ifmis/frontend/billEntry.html
+++ b/other_bills_task/ifmis/frontend/billEntry.html
@@ -1,10 +1,10 @@
 <!--Heading-->
-<div class="bg-white col-10">
+<div class="bg-white col-12">
     <div class="heading bg-primary bg-opacity-25">
    <p class="fw-bold text-primary p-2">OTHER BILLS</p>
 </div>
 <!--inline buttons-->
-<div class="heading border rounded bg-opacity-25 mt-2 p-2 col-8">
+<div class="heading border bg-dark rounded bg-opacity-10 mt-2 p-2 col-8">
     <div class="form-check form-check-inline fw-bold">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
         <label class="form-check-label" for="inlineRadio1">FORM 47- Salary Bills</label>
