--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -93,6 +93,7 @@
     <!-- Directives -->
     <script src="./assets/js/directives/header.directive.js"></script>
     <script src="./assets/js/directives/sidebar.directive.js"></script>
+    <script src="./assets/js/directives/otherBill.directive.js"></script>
 
     <!-- Filters -->
     <script src="./assets/js/filters/sumOfAmount.filter.js"></script>
