--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -110,4 +110,5 @@
     <script src="./assets/js/controllers/addAgency.controller.js"></script>
     <script src="./assets/js/controllers/billEntry.controller.js"></script>
     <script src="./assets/js/controllers/viewBill.controller.js"></script>
+    <script src="./assets/js/controllers/previewBill.controller.js"></script>
 </html>
