--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.30/angular-ui-router.js"
     integrity="sha512-5J08Lq3B2EfuPrNSYckUPHKYHaUhCQ4MdeObdcR0YZnr8eapZ7XMA2ejUyQYpWN+fwO48wuxsL5KDZYIVVVxvg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 
@@ -72,10 +72,10 @@
                         <i class="fas fa-house mt-1" style="font-size: 15px;font-weight: 10;"></i>
                         <span style="font-weight: 10;">Home</span>
                     </a>
-                    <a class="list-group-item">Add Agency In Bulk</a>
+                    <a class="list-group-item" href="">Add Agency In Bulk</a>
                     <a class="list-group-item" ui-sref="addAgency">Add New Agency</a>
                     <a class="list-group-item" ui-sref="billEntry">Bill Entry</a>
-                    <a class="list-group-item" href="">View Bill</a>
+                    <a class="list-group-item" ui-sref="viewBill">View Bill</a>
                     <a class="list-group-item" href="">Covid Bills</a>
                     <a class="list-group-item" href="">Print Bill</a>
                     <a class="list-group-item" href="">Check Bill Status</a>
